_sass/layout.scss
// The basic two column layout

.side-bar {
  z-index: 0;
  display: flex;
  flex-wrap: wrap;
  background-color: $sidebar-color;

  @include mq(md) {
    flex-flow: column nowrap;
    position: fixed;
    width: $nav-width-md;
    height: 100%;
    border-right: $border $border-color;
    align-items: flex-end;
  }

  @include mq(lg) {
    width: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width});
    min-width: $nav-width;
  }

  & ~ .main {
    @include mq(md) {
      margin-left: $nav-width-md;
    }

    @include mq(lg) {
      // stylelint-disable function-name-case
      // disable for Max(), we want to use the CSS max() function
      margin-left: Max(
        #{$nav-width},
        calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width})
      );
      // stylelint-enable function-name-case
    }

    .main-header {
      display: none;
      background-color: $sidebar-color;

      @include mq(md) {
        display: flex;
        background-color: $body-background-color;
      }

      &.nav-open {
        display: block;

        @include mq(md) {
          display: flex;
        }
      }
    }
  }
}

.main {
  margin: auto;

  @include mq(md) {
    position: relative;
    max-width: $content-width;
  }
}

.main-content-wrap {
  padding-top: $gutter-spacing-sm;
  padding-bottom: $gutter-spacing-sm;

  @include container;

  @include mq(md) {
    padding-top: $gutter-spacing;
    padding-bottom: $gutter-spacing;
  }
}

.main-header {
  z-index: 0;
  border-bottom: $border $border-color;

  @include mq(md) {
    display: flex;
    justify-content: space-between;
    height: $header-height;
  }
}

.site-nav,
.site-header,
.site-footer {
  width: 100%;

  @include mq(lg) {
    width: $nav-width;
  }
}

.site-nav {
  display: none;

  &.nav-open {
    display: block;
  }

  @include mq(md) {
    display: block;
    padding-top: $sp-8;
    padding-bottom: $gutter-spacing-sm;
    overflow-y: auto;
    flex: 1 1 auto;
  }
}

.site-header {
  display: flex;
  min-height: $header-height;
  align-items: center;

  @include mq(md) {
    height: $header-height;
    max-height: $header-height;
    border-bottom: $border $border-color;
  }
}

.site-title {
  flex-grow: 1;
  display: flex;
  height: 100%;
  align-items: center;
  padding-top: $sp-3;
  padding-bottom: $sp-3;
  color: $body-heading-color;

  @include container;

  @include fs-6;

  @include mq(md) {
    padding-top: $sp-2;
    padding-bottom: $sp-2;
  }
}

@if variable-exists(logo) {
  .site-logo {
    width: 100%;
    height: 100%;
    background-image: url($logo);
    background-repeat: no-repeat;
    background-position: left center;
    background-size: contain;
  }
}

.site-button {
  display: flex;
  height: 100%;
  padding: $gutter-spacing-sm;
  align-items: center;
}

@include mq(md) {
  .site-header .site-button {
    display: none;
  }
}

.site-title:hover {
  background-image: linear-gradient(
    -90deg,
    rgba($feedback-color, 1) 0%,
    rgba($feedback-color, 0.8) 80%,
    rgba($feedback-color, 0) 100%
  );
}

.site-button:hover {
  background-image: linear-gradient(
    -90deg,
    rgba($feedback-color, 1) 0%,
    rgba($feedback-color, 0.8) 100%
  );
}

// stylelint-disable selector-max-type

body {
  position: relative;
  padding-bottom: $sp-10;
  overflow-y: scroll;

  @include mq(md) {
    position: static;
    padding-bottom: 0;
  }
}

// stylelint-enable selector-max-type

.site-footer {
  position: absolute;
  bottom: 0;
  left: 0;
  padding-top: $sp-4;
  padding-bottom: $sp-4;
  color: $grey-dk-000;

  @include container;

  @include fs-2;

  @include mq(md) {
    position: static;
    justify-self: end;
  }
}

.icon {
  width: $sp-5;
  height: $sp-5;
  color: $link-color;
}

nav.toc {
  position: sticky;
  top: 1rem;
  left: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width + $content-width} + 1rem);
  float: left;
  margin-top: #{$header-height + $sp-8};
  max-width: $toc-width;
  max-height: calc(100vh - 1rem);
  overflow-y: auto;

  @include fs-3;
}
// Because toc-width is usually small => hide the list bullet points and minimize left padding
// TODO: utilize jekyll-toc's item_class and submenu_class
nav.toc ul {
  list-style-type: none;
  padding-left: $sp-3;
}
nav.toc > ul {
  padding-left: 0;
}
nav.toc li {
  padding-top: $sp-1;
}
nav.toc > ul::before {
  content: "Table of Contents";
  display: block;
  margin: $sp-2 0;
  text-transform: uppercase;
  letter-spacing: 0.1em;

  @include fs-2;
}
@media (max-width: calc(#{$nav-width + $toc-width + $content-width})) {
  nav.toc {
      display: none;
      visibility: hidden;
  }
}

